hphp/hack/test/typecheck/invalid_arraykey/invalid_arraykey.php.exp
File "invalid_arraykey.php", line 21, characters 3-14:
Invalid index type for this Vector (Typing[4110])
  File "invalid_arraykey.php", line 21, characters 6-9:
  This is an int because only int can be used to index into a Vector or vec.
  File "invalid_arraykey.php", line 21, characters 6-9:
  It is incompatible with null
File "invalid_arraykey.php", line 22, characters 3-13:
Invalid index type for this Vector (Typing[4110])
  File "invalid_arraykey.php", line 22, characters 6-8:
  This is an int because only int can be used to index into a Vector or vec.
  File "invalid_arraykey.php", line 22, characters 6-8:
  It is incompatible with a float
File "invalid_arraykey.php", line 26, characters 3-14:
Invalid index type for this vec (Typing[4110])
  File "invalid_arraykey.php", line 26, characters 6-9:
  This is an int because only int can be used to index into a Vector or vec.
  File "invalid_arraykey.php", line 26, characters 6-9:
  It is incompatible with null
File "invalid_arraykey.php", line 27, characters 3-13:
Invalid index type for this vec (Typing[4110])
  File "invalid_arraykey.php", line 27, characters 6-8:
  This is an int because only int can be used to index into a Vector or vec.
  File "invalid_arraykey.php", line 27, characters 6-8:
  It is incompatible with a float
File "invalid_arraykey.php", line 6, characters 3-10:
This value is not a valid array key type (string | int), it is null (Typing[4298])
File "invalid_arraykey.php", line 7, characters 3-9:
This value is not a valid array key type (string | int), it is a float (Typing[4298])
File "invalid_arraykey.php", line 11, characters 3-10:
This value is not a valid array key type (string | int), it is null (Typing[4298])
File "invalid_arraykey.php", line 12, characters 3-9:
This value is not a valid array key type (string | int), it is a float (Typing[4298])
File "invalid_arraykey.php", line 16, characters 3-10:
This value is not a valid array key type (string | int), it is null (Typing[4298])
File "invalid_arraykey.php", line 17, characters 3-9:
This value is not a valid array key type (string | int), it is a float (Typing[4298])
